--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -188,6 +188,7 @@
                         android:layout_marginTop="5dp"
                         android:text="서비스 이용약관 (필수)"
                         android:layout_weight="1"
+                        android:id="@+id/agreementCkBx"
                         />
 
 
@@ -202,7 +203,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:text="개인정보처리방침 (필수)"/>
+                        android:text="개인정보처리방침 (필수)"
+                        android:id="@+id/agreementCkBx1"
+                        />
 
                 </LinearLayout>
 
@@ -218,6 +221,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
                         android:text="유료상품 이용약관 (필수)"
+                        android:id="@+id/agreementCkBx2"
                         />
 
                 </LinearLayout>
@@ -232,7 +236,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:text="이벤트 마케팅 수신동의 (선택)"/>
+                        android:text="이벤트 마케팅 수신동의 (선택)"
+                        />
 
                 </LinearLayout>
 
